--- a/src/main/resources/templates/member/register.html
+++ b/src/main/resources/templates/member/register.html
@@ -5,36 +5,11 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Fashion Club an Ecommerce Online Shopping Category Flat Bootstrap responsive Website Template | Register ::
-        w3layouts</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="keywords" content="Fashion Club Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"/>
-    <script type="application/x-javascript"> addEventListener("load", function () {
-        setTimeout(hideURLbar, 0);
-    }, false);
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorate="~{layouts/layout2}">
 
-    function hideURLbar() {
-        window.scrollTo(0, 1);
-    } </script>
-    <!-- css -->
-    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
-    <link rel="stylesheet" href="/css/style.css" type="text/css" media="all"/>
-    <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css" media="all"/>
-    <!--// css -->
-    <!-- font -->
-    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic'
-          rel='stylesheet' type='text/css'>
-    <!-- //font -->
-    <script src="/js/jquery-1.11.1.min.js"></script>
-    <script src="/js/bootstrap.js"></script>
-</head>
-<body>
-	<div class="login">
+<div layout:fragment="content" class="login">
 		<div class="main-agileits">
 			<div class="form-w3agile">
 				<h3>회원가입</h3>
@@ -65,5 +40,4 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 	</div>
-</body>
 </html>
