--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,14 +28,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-6 logo-w3">
                 <a href="index.html"><img src="/images/logo2.png" alt=" " /><h1>IMAGE Farm</h1></a>
             </div>
-<!--            <div class="col-md-6 phone-w3l">-->
-<!--                <ul>-->
-<!--                    <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>-->
-<!--                    <li>+18045403380</li>-->
-<!--                    <li><a href="login.html">Login</a></li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--            <div class="clearfix"></div>-->
+            <!--            <div class="col-md-6 phone-w3l">-->
+            <!--                <ul>-->
+            <!--                    <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>-->
+            <!--                    <li>+18045403380</li>-->
+            <!--                    <li><a href="login.html">Login</a></li>-->
+            <!--                </ul>-->
+            <!--            </div>-->
+            <!--            <div class="clearfix"></div>-->
 
         </div>
     </div>
@@ -137,26 +137,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     );
                 });
             </script>
-<!--            <div class="col-md-4 search-agileinfo">-->
-<!--            <form action="#" method="post">-->
-<!--                <input type="search" name="Search" placeholder="Search for a Product..." required="">-->
-<!--                <button type="submit" class="btn btn-default search" aria-label="Left Align">-->
-<!--                    <i class="fa fa-search" aria-hidden="true"> </i>-->
-<!--                </button>-->
-<!--            </form>-->
-<!--        </div>-->
-        <div class="col-md-1 cart-wthree">
-            <div class="cart">
-                <form action="#" method="post" class="last">
-                    <input type="hidden" name="cmd" value="_cart" />
-                    <input type="hidden" name="display" value="1" />
-                    <button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
-                </form>
-            </div>
+            <!--            <div class="col-md-4 search-agileinfo">-->
+            <!--            <form action="#" method="post">-->
+            <!--                <input type="search" name="Search" placeholder="Search for a Product..." required="">-->
+            <!--                <button type="submit" class="btn btn-default search" aria-label="Left Align">-->
+            <!--                    <i class="fa fa-search" aria-hidden="true"> </i>-->
+            <!--                </button>-->
+            <!--            </form>-->
+            <!--        </div>-->
+            <!--        <div class="col-md-1 cart-wthree">-->
+            <!--            <div class="cart">-->
+            <!--                <form action="#" method="post" class="last">-->
+            <!--                    <input type="hidden" name="cmd" value="_cart" />-->
+            <!--                    <input type="hidden" name="display" value="1" />-->
+            <!--                    <button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>-->
+            <!--                </form>-->
+            <!--            </div>-->
+            <!--        </div>-->
+            <div class="clearfix"></div>
         </div>
-        <div class="clearfix"></div>
     </div>
-</div>
 
 </th:block>
 </html>
