--- a/src/main/resources/templates/layouts/layout2.html
+++ b/src/main/resources/templates/layouts/layout2.html
@@ -27,7 +27,7 @@
 
 <th:block th:replace="~{fragments/header::header}"></th:block>
 
-<th:block layout:fragment="content" class="content"></th:block>
+<th:block layout:fragment="content"></th:block>
 
 <th:block th:replace="~{fragments/footer::footer}"></th:block>
 
