--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -39,6 +39,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
         </div>
     </div>
+
     <div class="header-bottom-w3ls">
         <div class="container">
             <div class="col-md-7 navigation-agileits">
@@ -52,11 +53,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </button>
                     </div>
                     <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
-                        <ul class="nav navbar-nav ">
-                            <li class=" active"><a href="index2.html" class="hyper "><span>Home</span></a></li>
+                        <ul class="nav navbar-nav" style="display: flex; flex-direction: row">
+                            <li class="active"><a href="/index" class="hyper"><span>Home</span></a></li>
                             <li class="dropdown ">
-                                <a href="#" class="dropdown-toggle  hyper" data-toggle="dropdown" ><span>Menu<b class="caret"></b></span></a>
-                                <ul class="dropdown-menu multi">
+                                <a href="#" class="dropdown-toggle hyper" data-toggle="dropdown" ><span>Menu</span></a>
+                                <ul class="dropdown-menu multi" style="min-width: 300px">
                                     <div class="row">
                                         <div class="col-sm-4">
                                             <ul class="multi-column-dropdown">
@@ -117,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         </div>
                                     </ul>
                             </li> -->
-                            <li><a href="about.html" class="hyper"><span>About</span></a></li>
+<!--                            <li><a href="about.html" class="hyper"><span>About</span></a></li>-->
                             <!-- <li><a href="contact.html" class="hyper"><span>Contact Us</span></a></li> -->
                         </ul>
                     </div>
