--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -131,23 +131,25 @@
 <!--		<div class="clearfix"></div>-->
 <!--	</div>-->
 <!--</div>-->
-<!--<div class="banner-agile">-->
-<!--	<div class="container">-->
-<!--		<h2>WELCOME TO</h2>-->
-<!--		<h3>IMAGE <span>FARM</span></h3>-->
-<!--		<p>다양한  고해상도 이미지를 만나보세요! </p>-->
-<!--		<a href="about.html">Read More</a>-->
-<!--	</div>-->
-<!--</div>-->
+<div class="banner-agile">
+	<div class="container">
+		<h2>WELCOME TO</h2>
+		<h3>IMAGE <span>FARM</span></h3>
+		<p>다양한  고해상도 이미지를 만나보세요! </p>
+		<a href="about.html">Read More</a>
+	</div>
+</div>
 
-<!--<div class="col-md-4 search-agileinfo">-->
-<!--	<form action="#" method="post">-->
-<!--		<input type="search" name="Search" placeholder="Search for a Product..." required="">-->
-<!--		<button type="submit" class="btn btn-default search" aria-label="Left Align">-->
-<!--			<i class="fa fa-search" aria-hidden="true"> </i>-->
-<!--		</button>-->
-<!--	</form>-->
-<!--</div>-->
+<div class="col-md-4 search-agileinfo">
+	<form action="#" method="post">
+		<input type="search" name="Search" placeholder="Search for a Product..." required="">
+		<button type="submit" class="btn btn-default search" aria-label="Left Align">
+			<i class="fa fa-search" aria-hidden="true">검색</i>
+		</button>
+	</form>
+</div>
+
+
 
 <div class="banner-bootom-w3-agileits">
 	<div class="container">
