--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -14,9 +14,6 @@
         }
         .banner{
             height: 300px;
-            position: absolute; top:0; left: 0;
-            width: 100%;
-            height: 100%;
         }
         .card-text{
             text-overflow: ellipsis;
@@ -28,6 +25,11 @@
         }
         .center{
             text-align:center;
+        }
+        .banner{
+            position: absolute; top:0; left: 0;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </th:block>
