--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,7 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="header-top-w3layouts">
         <div class="container">
             <div class="col-md-6 logo-w3">
-                <a href="index.html"><img src="/images/logo2.png" alt=" " /><h1>IMAGE Farm</h1></a>
+                <a href="/index"><img src="/images/logo2.png" alt=" " /><h1>IMAGE Farm</h1></a>
             </div>
             <!--            <div class="col-md-6 phone-w3l">-->
             <!--                <ul>-->
@@ -118,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         </div>
                                     </ul>
                             </li> -->
-<!--                            <li><a href="about.html" class="hyper"><span>About</span></a></li>-->
+                            <!--                            <li><a href="about.html" class="hyper"><span>About</span></a></li>-->
                             <!-- <li><a href="contact.html" class="hyper"><span>Contact Us</span></a></li> -->
                         </ul>
                     </div>
