--- a/src/main/resources/templates/member/register.html
+++ b/src/main/resources/templates/member/register.html
@@ -9,6 +9,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorate="~{layouts/layout2}">
 
+<!-- 사용자 script 추가 -->
+<th:block layout:fragment="script">
+	<script th:inline="javascript">
+		$(document).ready(function(){
+			var errorMessage = [[${errorMessage}]];
+			if (errorMessage != null) {
+				alert(errorMessage);
+			}
+		});
+	</script>
+</th:block>
+
 <div layout:fragment="content" class="login">
 		<div class="main-agileits">
 			<div class="form-w3agile">
@@ -26,7 +38,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="key">
 						<i class="fa fa-lock" aria-hidden="true"></i>
-						<input type="password" name="password" required="" placeholder="비밀번호를 입력해주세요">
+						<input type="password" id="password" name="password" required="" placeholder="비밀번호를 입력해주세요">
 						<div class="clearfix"></div>
 					</div>
 					<div class="key">
@@ -37,6 +49,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<input type="submit" value="회원가입">
 					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 				</form>
+			</div>
+			<div class="forg">
+				<a href="/members/login" class="forg-right">로그인</a>
+				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
