--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Fashion Club an Ecommerce Online Shopping Category  Flat Bootstrap responsive Website Template | Home :: w3layouts</title>
+    <title>Fashion Club an Ecommerce Online Shopping Category Flat Bootstrap responsive Website Template | Home ::
+        w3layouts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="Fashion Club Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"/>
+    <script type="application/x-javascript"> addEventListener("load", function () {
+        setTimeout(hideURLbar, 0);
+    }, false);
+
+    function hideURLbar() {
+        window.scrollTo(0, 1);
+    } </script>
     <!-- css -->
-    <link th:href="@{/css/bootstrap.css}" rel="stylesheet" type="text/css" media="all" />
-    <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" media="all" />
-    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" media="all" />
+    <link th:href="@{/css/bootstrap.css}" rel="stylesheet" type="text/css" media="all"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" media="all"/>
+    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" media="all"/>
     <!--// css -->
     <!-- font -->
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic'
+          rel='stylesheet' type='text/css'>
     <!-- //font -->
     <script src="/js/jquery-1.11.1.min.js"></script>
     <script src="/js/bootstrap.js"></script>
@@ -24,61 +32,86 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="header-top-w3layouts">
         <div class="container">
             <div class="col-md-6 logo-w3">
-                <a href="/index"><img src="/images/logo2.png" alt=" " /><h1>IMAGE Farm</h1></a>
+                <a href="/index"><img src="/images/logo2.png" alt=" "/>
+                    <h1>IMAGE Farm</h1></a>
             </div>
         </div>
     </div>
 
     <div class="header-bottom-w3ls">
         <div class="container">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/index">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown link
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">아이콘</a></li>
-                        <li><a class="dropdown-item" href="#">일러스트</a></li>
-                        <li><a class="dropdown-item" href="#">컬러</a></li>
-                        <li><a class="dropdown-item" href="#">사진</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/index">홈</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                                   data-bs-toggle="dropdown" aria-expanded="false">
+                                    메뉴
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <li><a class="dropdown-item" href="#">아이콘</a></li>
+                                    <li><a class="dropdown-item" href="#">일러스트</a></li>
+                                    <li><a class="dropdown-item" href="#">사진</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse">
+                            data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
 
-            </ul>
-            <script>
-                $(document).ready(function(){
-                    $(".dropdown").hover(
-                        function() {
-                            $('.dropdown-menu', this).stop( true, true ).slideDown("fast");
-                            $(this).toggleClass('open');
-                        },
-                        function() {
-                            $('.dropdown-menu', this).stop( true, true ).slideUp("fast");
-                            $(this).toggleClass('open');
-                        }
-                    );
-                });
-            </script>
-        </div>
-    </div>
-</nav>
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0 navbar-right">
+                            <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+                                <a class="nav-link" href="/admin/item/new">상품 등록</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+                                <a class="nav-link" href="/admin/items">상품 관리</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link" href="/cart">장바구니</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link" href="/orders">구매이력</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAnonymous()">
+                                <a class="nav-link" href="/members/login">로그인</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link" href="/members/logout">로그아웃</a>
+                            </li>
+                        </ul>
+                        <script>
+                            $(document).ready(function () {
+                                $(".dropdown").hover(
+                                    function () {
+                                        $('.dropdown-menu', this).stop(true, true).slideDown("fast");
+                                        $(this).toggleClass('open');
+                                    },
+                                    function () {
+                                        $('.dropdown-menu', this).stop(true, true).slideUp("fast");
+                                        $(this).toggleClass('open');
+                                    }
+                                );
+                            });
+                        </script>
+                    </div>
+                </div>
+            </nav>
 
         </div>
     </div>
 </th:block>
+
+</html>
+
 
 <!--<th:block th:fragment="header">-->
 <!--    <div class="header-top-w3layouts">-->
@@ -145,9 +178,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--    </div>-->
 
 <!--</th:block>-->
-</html>
-
-
 
 
 <!--<!DOCTYPE html>-->
