--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<th:block th:fragment="footer">
-    <div class="footer">
+    <div class="footer" th:fragment="footer" style="background-color: lightgrey">
         <footer class="page-footer font-small cyan darken-3">
             <div class="footer-copyright text-center py-3">
                 2023 BusanIt Academy Shopping Mall WebSite
             </div>
         </footer>
     </div>
-</th:block>
 </html>
