--- a/src/main/resources/templates/member/passwordCheck.html
+++ b/src/main/resources/templates/member/passwordCheck.html
@@ -26,22 +26,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <!-- 사용자 script 추가 -->
 <th:block layout:fragment="script">
-    <script type="text/javascript">
-        $(document).on('click', '#checkPwd', function() {
+    <script>
+        $('#checkPwd').click(function() {
             const checkPassword = $('#password').val();
             if(!checkPassword || checkPassword.trim() === ""){
                 alert("비밀번호를 입력하세요.");
             } else{
                 $.ajax({
                     type: 'GET',
-                    url: '/members/checkPwd',
+                    url: '/rest/checkPwd',
                     data: {'checkPassword': checkPassword},
                     datatype: "text"
                 }).done(function(result){
                     console.log(result);
                     if(result){
                         console.log("비밀번호 일치");
-                        window.location.href="/members/updateForm";
+                        window.location.href="/settings/update";
                     } else if(!result){
                         console.log("비밀번호 틀림");
                         // 비밀번호가 일치하지 않으면
@@ -60,19 +60,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <br>
         <h1 class="title">비밀번호 확인</h1>
         <br>
-        <div class="main-agileits">
-            <div class="form-w3agile">
-                <h3>로그인</h3>
-                <form action="/members/checkPwdForm" method="post">
-                    <div class="key">
-                        <i class="fa fa-lock" aria-hidden="true"></i>
-                        <input type="password" name="password" required="" placeholder="비밀번호를 입력해주세요">
-                        <div class="clearfix"></div>
-                    </div>
-                    <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-                    <input type="submit" value="로그인">
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                </form>
+        <div class="card-body">
+            <div class="text-start">
+                <input type="hidden" th:name="_csrf" th:value="${_csrf.token}"/>
+                <div class="input-group input-group-outline my-3">
+                    <label class="form-label">비밀번호 확인</label>
+                    <input type="password" id="password" name="password" class="form-control">
+                </div>
             </div>
+            <div class="text-center">
+                <button class="btn bg-gradient-primary w-100 my-4 mb-2" id="checkPwd"> 비밀번호 확인</button>
+            </div>
+        </div>
     </div>
 </html>
