9/06 카테고리별 분류 완료파일

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -54,10 +54,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="/#">아이콘</a>
-                    <a class="navbar-brand" href="/#">일러스트</a>
-                    <a class="navbar-brand" href="/#">사진</a>
+                <div class="container-fluid" id="buttonLink">
+                    <a class="navbar-brand" href="/icon/ICON">아이콘</a>
+                    <a class="navbar-brand" href="/illust/ILLUST">일러스트</a>
+                    <a class="navbar-brand" href="/photo/PHOTO">사진</a>
 
 <!--                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"-->
 <!--                            data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"-->
