--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -273,6 +273,7 @@ button.w3view-cart:focus{
 /*--banner bottom--*/
 .banner-bootom-w3-agileits,.top-products,.fandt,.top-brands,.newsletter,.footer,.content,.contact,.about,.team,.main-grid-border,.faq,.products,.collpse.tabs,.login,.check-out,.payment{
 	padding:50px 0;
+    margin-top: -5rem;
 }
 .top-products h3,.features h3,.top-brands h3,.contact h3,.about h3,.team h3,h3.agileits-icons-title,.faq h3,.products h3,.login h3,.check-out h3,.payment h3{
 	font-size:40px;
@@ -458,6 +459,7 @@ ul.resp-tabs-list{
 	/* position:relative; */
 }
 ul.resp-tabs-list li:nth-child(2):before {
+    display: none;
     content: '';
     background: #999;
     width: 3.7%;
@@ -467,6 +469,7 @@ ul.resp-tabs-list li:nth-child(2):before {
     left: 33.8%;
 }
 ul.resp-tabs-list li:nth-child(2):after{
+    display: none;
     content: '';
     background: #999;
     width: 3.7%;
@@ -476,6 +479,7 @@ ul.resp-tabs-list li:nth-child(2):after{
     left: 45.5%;
 }
 ul.resp-tabs-list li:nth-child(3):after{
+    display: none;
     content: '';
     background: #999;
     width: 3.7%;
