--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1749,11 +1749,7 @@ p.single-price-text {
     padding: 3em;
     position: absolute;
     top: 25%;
-<<<<<<< HEAD
     left: 38%;
-=======
-    left: 33.33%;
->>>>>>> f4606a3bc4ab0d9f9c75e328c690296c78097ab0
 }
 .key {
     background: #fff;
@@ -3366,16 +3362,17 @@ button{
     background: url("../banner/banner.jpg")   ;
     background-position: 40% 35%;
     height: 550px;
+    background-size: cover;
 }
 #banner1{
     background: url("../banner/banner1.jpg")   ;
-
     height: 550px;
+    background-size: cover;
 }
 #banner2{
     background: url("../banner/banner2.jpeg")   ;
-
     height: 550px;
+    background-size: cover;
 }
 .banner-name{
     position: relative;
