--- a/src/main/resources/templates/layouts/layout3.html
+++ b/src/main/resources/templates/layouts/layout3.html
@@ -28,7 +28,7 @@
 </head>
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
 
-<th:block th:replace="~{fragments/header::header}"></th:block>
+<th:block th:replace="~{fragments/supervisorHeader::header}"></th:block>
 
 <th:block layout:fragment="content"></th:block>
 
