좋아요 기능 추가

--- a/src/main/resources/templates/item/itemSearch.html
+++ b/src/main/resources/templates/item/itemSearch.html
@@ -5,7 +5,7 @@
       layout:decorate="~{layouts/layout2}" >
 <div layout:fragment="content">
 
-    <div class="boody">
+    <div class="boody searchbody">
         <div class="itemsearchbox" >
             <form class="form-inline my-2 my-lg-0" th:object="${itemSearchDto}" method="get">
                 <div class="search-mode search-mode2">
