--- a/src/main/resources/templates/supervisor/svMembersMng.html
+++ b/src/main/resources/templates/supervisor/svMembersMng.html
@@ -30,13 +30,18 @@
         }
 
         function deleteMember(memberId) {
+
             if (confirm("사용자 아이디를 삭제하시겠습니까?")) {
                 $.ajax({
                     type: "DELETE",
                     url: "/supervisor/members/" + memberId,
-                    success: function (response) {
+                    beforeSend : function(xhr){
+                        /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                        xhr.setRequestHeader(header, token);
+                    },
+                    success: function (response, status) {
                         console.log(response);
-                        if (response.success) {
+                        if (status == "success") {
                             // 성공적으로 삭제되었을 때 수행할 작업을 추가하세요.
                             alert("사용자 아이디가 성공적으로 삭제되었습니다.");
                             location.reload(); // 페이지 새로고침 또는 필요한 업데이트 작업 수행
@@ -71,6 +76,7 @@
             <tr>
                 <th>사용자 번호</th>
                 <th>사용자 이름</th>
+                <th>사용자 역할</th>
                 <th>가입일</th>
                 <th>이메일</th>
                 <th>주소</th>
@@ -82,6 +88,7 @@
             <tr th:each="member, status: ${members.getContent()}">
                 <td th:text="${member.id}"></td>
                 <td th:text="${member.name}"></td>
+                <td th:text="${member.role}"></td>
                 <td th:text="${member.regTime}"></td>
                 <td th:text="${member.email}"></td>
                 <td th:text="${member.address}"></td>
