0912 오전 중간본입니다.

--- a/src/main/resources/templates/fragments/supervisorHead.html
+++ b/src/main/resources/templates/fragments/supervisorHead.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:fragment="suprervisorHead">
+<th:block th:fragment="supervisorHead">
 <head>
 
     <meta charset="utf-8">
