--- a/src/main/resources/templates/supervisor/supervisorPage.html
+++ b/src/main/resources/templates/supervisor/supervisorPage.html
@@ -3,7 +3,10 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<div
+
 <div layout:fragment="content" class="content-mg">
 <h1>최고 관리자 페이지입니다</h1>
+
 </div>
 </html>
