--- a/src/main/resources/templates/fragments/supervisorHead.html
+++ b/src/main/resources/templates/fragments/supervisorHead.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:fragment="suprervisorHead">
+<th:block th:fragment="supervisorHead">
 <head>
 
     <meta charset="utf-8">
@@ -23,6 +23,9 @@
     <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
     <script src="https://accounts.google.com/gsi/client" async></script>
+
+
+
 
     <!-- Menu Toggle Script -->
     <script>
