댓글 하다맘 , css 보충 ,조회수 기반 정렬

--- a/src/main/resources/templates/fragments/supervisorHeader.html
+++ b/src/main/resources/templates/fragments/supervisorHeader.html
@@ -4,12 +4,12 @@
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
             <div class="sidebar-heading">
-                <a href="/supervisor/page" style="color: black;">최고 관리자</a>
+                <a href="/supervisor/page" style="color: black;">관리자 홈</a>
             </div>
             <div class="list-group list-group-flush">
                 <a href="/supervisor/items" class="list-group-item list-group-item-action bg-light">상품 정보</a>
                 <a href="/supervisor/members" class="list-group-item list-group-item-action bg-light">사용자 정보</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
+                <a href="/supervisor/members" class="list-group-item list-group-item-action bg-light">전체 구매 목록</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
