--- a/src/main/resources/templates/item/itemSearch.html
+++ b/src/main/resources/templates/item/itemSearch.html
@@ -6,7 +6,7 @@
 <div layout:fragment="content">
 
     <div class="boody searchbody">
-        <div class="itemsearchbox" >
+
             <form class="form-inline my-2 my-lg-0" th:object="${itemSearchDto}" method="get">
                 <div class="search-mode search-mode2">
                     <label >
@@ -15,11 +15,11 @@
                     <button type="submit" id="search2"  ><img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png"  alt=""></button>
                 </div>
             </form>
-        </div>
+
 
         <div class="banner-bootom-w3-agileits" >
 
-            <div class="gallery">
+            <div class="gallery gallery2">
                 <div class="row" >
                     <th:block th:each="item, status: ${items.getContent()}">
 
@@ -31,33 +31,34 @@
 
                     </th:block>
                 </div>
+                <div class="pagin" th:with="start=${(items.number/maxPage)*maxPage + 1},
+                            end=(${(items.totalPages == 0) ? 1 : (start + (maxPage - 1) < items.totalPages ? start + (maxPage - 1) : items.totalPages)})" >
+                    <ul class="pagination justify-content-center">
+
+                        <li class="page-item " th:classappend="${items.first}?'disabled'" >
+                            <a th:onclick="'javascript:page(' + ${items.number - 1} + ')'" aria-label='Previous' class="page-link">
+                                <span aria-hidden='true'>Previous</span>
+                            </a>
+                        </li>
+
+                        <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${items.number eq 'page-1'}?'active':''">
+                            <a th:onclick="'javascript:page(' + ${page - 1} + ')'" th:inline="text" class="page-link">[[${page}]]</a>
+                        </li>
+
+                        <li class="page-item" th:classappend="${items.last}?'disabled'">
+                            <a th:onclick="'javascript:page(' + ${items.number + 1} + ')'" aria-label='Next' class="page-link">
+                                <span aria-hidden='true'>Next</span>
+                            </a>
+                        </li>
+
+                    </ul>
+                </div>
             </div>
         </div>
 
 
 
-        <div class="pagin" th:with="start=${(items.number/maxPage)*maxPage + 1},
-                            end=(${(items.totalPages == 0) ? 1 : (start + (maxPage - 1) < items.totalPages ? start + (maxPage - 1) : items.totalPages)})" >
-            <ul class="pagination justify-content-center">
 
-                <li class="page-item " th:classappend="${items.first}?'disabled'" >
-                    <a th:onclick="'javascript:page(' + ${items.number - 1} + ')'" aria-label='Previous' class="page-link">
-                        <span aria-hidden='true'>Previous</span>
-                    </a>
-                </li>
-
-                <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${items.number eq 'page-1'}?'active':''">
-                    <a th:onclick="'javascript:page(' + ${page - 1} + ')'" th:inline="text" class="page-link">[[${page}]]</a>
-                </li>
-
-                <li class="page-item" th:classappend="${items.last}?'disabled'">
-                    <a th:onclick="'javascript:page(' + ${items.number + 1} + ')'" aria-label='Next' class="page-link">
-                        <span aria-hidden='true'>Next</span>
-                    </a>
-                </li>
-
-            </ul>
-        </div>
 
     </div>
 </div>
